--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,7 @@
     <title>The Digital Twin as a Service</title>
   </head>
   <body>
+    <script src="/env.js" type="text/javascript"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
