--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <script src="/env.js" type="text/javascript"></script>
+    <script src="/secret_env.js" type="text/javascript"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
