docs for a0d18bc commit

--- a/version0.2/admin/host.html
+++ b/version0.2/admin/host.html
@@ -1022,7 +1022,7 @@
 <p>You need to configure the Traefik gateway, library microservice and react client website.</p>
 <p>The first step is to decide on the number of users and their usenames. The traefik gateway configuration has a template for two users. You can modify the usernames in the template to the usernames chosen by you.</p>
 <h3 id="the-traefik-gateway-server">The traefik gateway server</h3>
-<p>You can run the Run the Traefik gateway server in both and HTTPS HTTPS mode to experience the DTaaS application. The installation guide assumes that you can run the application in HTTPS mode.</p>
+<p>You can run the Run the Traefik gateway server in both HTTP and HTTPS mode to experience the DTaaS application. The installation guide assumes that you can run the application in HTTPS mode.</p>
 <p>The Traefik gateway configuration is at <em>deploy/config/gateway/fileConfig.yml</em>. Change <code>foo.com</code> to your local hostname and user1/user2 to the usernames chosen by you.</p>
 <div class="admonition tip">
 <p class="admonition-title">Tip</p>
