--- a/development/developer/system/current-status.html
+++ b/development/developer/system/current-status.html
@@ -1281,7 +1281,7 @@ They are:
 <a href="https://github.com/grafana/grafana">Grafana</a>,
 <a href="https://github.com/rabbitmq/rabbitmq-server">RabbitMQ</a>
 and
-<a href="https://mqtt.org/">MQTT</a>.</p>
+<a href="https://github.com/eclipse/mosquitto">MQTT</a>.</p>
 <p>These services can be used by DTs and PTs for communication, storing and
 visualization of data. There can also be monitoring services setup
 based on these services.</p>
@@ -1289,7 +1289,7 @@ based on these services.</p>
 <p>The development priorities for the DTaaS software development team are:</p>
 <ul>
 <li><a href="https://github.com/INTO-CPS-Association/DTaaS/tree/feature/distributed-demo/servers/execution/runner">DT Runner</a>
-(API Interface to DT)</li>
+  (API Interface to DT)</li>
 <li>Multi-user and microservice security</li>
 <li>Increased automation of installation procedures</li>
 <li>DT Configuration DSL ín the form of YAML schema</li>
