--- a/development/index.html
+++ b/development/index.html
@@ -1150,18 +1150,30 @@
 <h1 id="what-is-dtaas">What is DTaaS</h1>
 <p>The Digital Twin as a Service (DTaaS) software platform is useful
 to <font color="orange"> <strong>Build, Use and Share</strong> </font> digital twins (DTs).</p>
-<p><img alt="🦾" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@14.1.2/assets/svg/1f9be.svg" title=":mechanical_arm:" /> <font color="orange"><strong>Build</strong></font>: The DTs are built on the software platform
+<p><img alt="🦾" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@14.1.2/assets/svg/1f9be.svg" title=":mechanical_arm:" /> <font color="orange"><strong>Build</strong></font>: The
+DTs are built on the software platform
 using the reusable DT components available on the platform.</p>
-<p><img alt="🧑‍💼" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@14.1.2/assets/svg/1f9d1-200d-1f4bc.svg" title=":office_worker:" /> <img alt="🧑‍🏭" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@14.1.2/assets/svg/1f9d1-200d-1f3ed.svg" title=":factory_worker:" /> <font color="orange"><strong>Use</strong></font>: Use the DTs on the software platform.</p>
-<p><img alt="🤝" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@14.1.2/assets/svg/1f91d.svg" title=":handshake:" /> <font color="orange"><strong>Share</strong></font>: Share ready to use DTs with other users.
+<p><img alt="🧑‍💼" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@14.1.2/assets/svg/1f9d1-200d-1f4bc.svg" title=":office_worker:" /> <img alt="🧑‍🏭" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@14.1.2/assets/svg/1f9d1-200d-1f3ed.svg" title=":factory_worker:" /> <font color="orange"><strong>Use</strong></font>: Use
+the DTs on the software platform.</p>
+<p><img alt="🤝" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@14.1.2/assets/svg/1f91d.svg" title=":handshake:" /> <font color="orange"><strong>Share</strong></font>: Share ready to use DTs
+with other users.
 It is also possible to share the services offered by one DT with other users.</p>
 <p>There is an overview of the software available in the form of
 <a href="https://odin.cps.digit.au.dk/into-cps/dtaas/assets/DTaaS-short-intro.pdf">slides</a>,
 <a href="https://odin.cps.digit.au.dk/into-cps/dtaas/assets/videos/DTaaS-short-intro.mp4">video</a>,
 and <a href="https://odin.cps.digit.au.dk/into-cps/dtaas/assets/videos/dtaas-v0.2.0-demo.mp4">feature walkthrough</a>.</p>
 <h2 id="license">License</h2>
-<p>This software is owned by <a href="https://into-cps.org/">The INTO-CPS Association</a> and is available under <a href="LICENSE.html">the INTO-CPS License</a>.</p>
-<p>The DTaaS software platform uses <a href="https://github.com/traefik/traefik">Træfik</a>, <a href="https://github.com/ml-tooling/ml-workspace">ML Workspace</a>, <a href="https://github.com/grafana/grafana">Grafana</a>, <a href="https://github.com/influxdata/influxdb">InfluxDB</a> and <a href="https://github.com/rabbitmq/rabbitmq-server">RabbitMQ</a> open-source components. These software components have their own licenses.</p>
+<p>This software is owned by
+<a href="https://into-cps.org/">The INTO-CPS Association</a>
+and is available under <a href="LICENSE.html">the INTO-CPS License</a>.</p>
+<p>The DTaaS software platform uses <a href="https://github.com/traefik/traefik">Træfik</a>,
+<a href="https://github.com/ml-tooling/ml-workspace">ML Workspace</a>,
+<a href="https://github.com/grafana/grafana">Grafana</a>,
+<a href="https://github.com/influxdata/influxdb">InfluxDB</a>,
+<a href="https://github.com/eclipse/mosquitto">MQTT</a> and
+<a href="https://github.com/rabbitmq/rabbitmq-server">RabbitMQ</a>
+open-source components.
+These software components have their own licenses.</p>
 
 
 
