--- a/development/user/digital-twins/lifecycle.html
+++ b/development/user/digital-twins/lifecycle.html
@@ -1286,8 +1286,9 @@ if deemed necessary.</p>
 <span class="normal"><a href="#__codelineno-2-2">2</a></span></pre></div></td><td class="code"><div><pre><span></span><code><span id="__span-2-1"><a id="__codelineno-2-1" name="__codelineno-2-1"></a><span class="ch">#!/bin/bash</span>
 </span><span id="__span-2-2"><a id="__codelineno-2-2" name="__codelineno-2-2"></a><span class="nb">printf</span><span class="w"> </span><span class="s2">&quot;operation is not supported on this digital twin&quot;</span>
 </span></code></pre></div></td></tr></table></div>
-<p>The lifecycle programs can call other programs in the code base. In the case of
-<code>lifecycle/terminate</code> program, it is calling another script to do the necessary job.</p>
+<p>The lifecycle programs can call other programs in the code base.
+In the case of <code>lifecycle/terminate</code> program, it is calling another
+script to do the necessary job.</p>
 <div class="language-bash highlight"><table class="highlighttable"><tr><th colspan="2" class="filename"><span class="filename">lifecycle/terminate</span></th></tr><tr><td class="linenos"><div class="linenodiv"><pre><span></span><span class="normal"><a href="#__codelineno-3-1">1</a></span>
 <span class="normal"><a href="#__codelineno-3-2">2</a></span></pre></div></td><td class="code"><div><pre><span></span><code><span id="__span-3-1"><a id="__codelineno-3-1" name="__codelineno-3-1"></a><span class="ch">#!/bin/bash</span>
 </span><span id="__span-3-2"><a id="__codelineno-3-2" name="__codelineno-3-2"></a>lifecycle/clean
