--- a/development/user/features.html
+++ b/development/user/features.html
@@ -1169,18 +1169,27 @@
 <h2 id="advantages">Advantages</h2>
 <p>The DTaaS software platform provides certain advantages to users:</p>
 <ul>
-<li>Support for different kinds of Digital Twins - CFD, Simulink, co-simulation, FEM, ROM, ML etc.</li>
+<li>Support for different kinds of Digital Twins</li>
+<li>CFD, Simulink, co-simulation, FEM, ROM, ML etc.</li>
 <li>Integrates with other Digital Twin frameworks</li>
 <li>Facilitate availability of Digital Twin as a service</li>
 <li>Collaboration and reuse</li>
-<li>Private workspaces for authoring and verification of reusable assets, trial run DTs</li>
+<li>Private workspaces for authoring and verification
+  of reusable assets, trial run DTs</li>
 <li>Cost effectiveness</li>
 </ul>
 <h2 id="software-features">Software Features</h2>
-<p>Each installation of DTaaS platform comes with the features highlighted in the following picture.</p>
+<p>Each installation of DTaaS platform comes with
+the features highlighted in the following picture.</p>
 <p><img alt="Features" src="current-status.png" /></p>
-<p>All the users have dedicated workspaces. These workspaces are dockerized versions of Linux Desktops. The user desktops are isolated so the installations and customizations done in one user workspace do not effect the other user workspaces.</p>
-<p>Each user workspace comes with some development tools pre-installed. These tools are directly accessible from web browser. The following tools are available at present:</p>
+<p>All the users have dedicated workspaces.
+These workspaces are dockerized versions of Linux Desktops.
+The user desktops are isolated so the installations and
+customizations done in one user workspace do not effect the
+other user workspaces.</p>
+<p>Each user workspace comes with some development tools pre-installed.
+These tools are directly accessible from web browser.
+The following tools are available at present:</p>
 <table>
 <thead>
 <tr>
@@ -1207,8 +1216,11 @@
 </tr>
 </tbody>
 </table>
-<p>In addition, users have access to xfce-based remote desktop via VNC client. The VNC client is available right in the web browser. The xfce supported desktop software can also be run in their workspace.</p>
-<p>The DTaaS software platform has some pre-installed services available. The currently available services are:</p>
+<p>In addition, users have access to xfce-based remote desktop via VNC client.
+The VNC client is available right in the web browser.
+The xfce supported desktop software can also be run in their workspace.</p>
+<p>The DTaaS software platform has some pre-installed services available.
+The currently available services are:</p>
 <table>
 <thead>
 <tr>
@@ -1235,8 +1247,14 @@
 </tr>
 </tbody>
 </table>
-<p>In addition, the workspaces are connected to the Internet so all the Digital Twins run within their workspace can interact with both the internal and external services.</p>
-<p>The users can publish and reuse the digital twin assets available on the platform. In addition, users can run their digital twins and make these live digital twins available as services to their clients. The clients need not be users of the DTaaS software installation.</p>
+<p>In addition, the workspaces are connected to the Internet so
+all the Digital Twins run within their workspace can interact
+with both the internal and external services.</p>
+<p>The users can publish and reuse the digital twin assets
+available on the platform. In addition, users can run their
+digital twins and make these live digital twins available as
+services to their clients. The clients need not be users of
+the DTaaS software installation.</p>
 
 
 
