--- a/development/user/motivation.html
+++ b/development/user/motivation.html
@@ -1182,7 +1182,8 @@
 <p>There are quite a few solutions proposed in the recent past to solve
 this problem. Some of them are:</p>
 <ul>
-<li>Focus on data from Physical Twins (PTs) to perform analysis, diagnosis, planning etc…</li>
+<li>Focus on data from Physical Twins (PTs) to
+  perform analysis, diagnosis, planning etc…</li>
 <li>Share DT assets across the upstream, downstream etc….</li>
 <li>Evaluate different models of PT</li>
 <li>DevOps for Cyber Physical Systems (CPS)</li>
