--- a/development/user/servers/lib/assets.html
+++ b/development/user/servers/lib/assets.html
@@ -1278,26 +1278,63 @@
 
 
 <h1 id="reusable-assets">Reusable Assets</h1>
-<p>The reusability of digital twin assets makes it easy for users to work with the digital twins. The reusability of assets is a fundamental feature of the platform.</p>
+<p>The reusability of digital twin assets makes it easy for
+users to work with the digital twins. The reusability of
+assets is a fundamental feature of the platform.</p>
 <h2 id="kinds-of-reusable-assets">Kinds of Reusable Assets</h2>
 <p>The DTaaS software categorizes all the reusable library assets into five categories:</p>
 <p><img alt="Categories of Library Assets" src="library-assets.png" /></p>
 <h3 id="functions">Functions</h3>
-<p>The functions responsible for pre- and post-processing of: data inputs, data outputs, control outputs. The data science libraries and functions can be used to create useful function assets for the platform.
-In some cases, Digital Twin models require calibration prior to their use; functions written by domain experts along with right data inputs can make model calibration an achievable goal. Another use of functions is to process the sensor and actuator data of both Physical Twins and Digital Twins.</p>
+<p>The functions responsible for pre- and post-processing of:
+data inputs, data outputs, control outputs. The data science
+libraries and functions can be used to create useful function
+assets for the platform.
+In some cases, Digital Twin models require calibration prior
+to their use; functions written by domain experts along with
+right data inputs can make model calibration an achievable goal.
+Another use of functions is to process the sensor and actuator
+data of both Physical Twins and Digital Twins.</p>
 <h3 id="data">Data</h3>
-<p>The data sources and sinks available to a digital twins. Typical examples of data sources are sensor measurements from  Physical Twins, and test data provided by manufacturers for calibration of models. Typical examples of data sinks are visualization software, external users and data storage services. There exist special outputs such as events, and commands which are akin to control outputs from a Digital Twin. These control outputs usually go to Physical Twins, but they can also go to another Digital Twin.</p>
+<p>The data sources and sinks available to a digital twins.
+Typical examples of data sources are sensor measurements from
+Physical Twins, and test data provided by manufacturers for
+calibration of models. Typical examples of data sinks are visualization
+software, external users and data storage services. There exist special
+outputs such as events, and commands which are akin to control outputs
+from a Digital Twin. These control outputs usually go to Physical Twins,
+but they can also go to another Digital Twin.</p>
 <h3 id="models">Models</h3>
-<p>The model assets are used to describe different aspects of Physical Twins and their environment, at different levels of abstraction. Therefore, it is possible to have multiple models for the same Physical Twin. For example, a flexible robot used in a car production plant may have structural model(s) which will be useful in tracking the wear and tear of parts. The same robot can have a behavioural model(s) describing the safety guarantees provided by the robot manufacturer. The same robot can also have a functional model(s) describing the part manufacturing capabilities of the robot.</p>
+<p>The model assets are used to describe different aspects of Physical Twins
+and their environment, at different levels of abstraction. Therefore, it
+is possible to have multiple models for the same Physical Twin.
+For example, a flexible robot used in a car production plant may have
+structural model(s) which will be useful in tracking the wear and tear
+of parts. The same robot can have a behavioural model(s) describing the
+safety guarantees provided by the robot manufacturer. The same robot
+can also have a functional model(s) describing the part manufacturing
+capabilities of the robot.</p>
 <h3 id="tools">Tools</h3>
-<p>The software tool assets are software used to create, evaluate and analyze models. These tools are executed on top of a computing platforms, i.e., an operating system, or virtual machines like Java virtual machine, or inside docker containers. The tools tend to be platform specific, making them less reusable than models. 
-A tool can be packaged to run on a local or distributed virtual machine environments thus allowing selection of most suitable execution environment for a Digital Twin. 
-Most models require tools to evaluate them in the context of data inputs. 
-There exist cases where executable packages are run as binaries in a computing environment. Each of these packages are a pre-packaged combination of models and tools put together to create a ready to use Digital Twins.</p>
+<p>The software tool assets are software used to create, evaluate and
+analyze models. These tools are executed on top of a computing
+platforms, i.e., an operating system, or virtual machines like
+Java virtual machine, or inside docker containers.
+The tools tend to be platform specific, making them less reusable than models.
+A tool can be packaged to run on a local or distributed virtual
+machine environments thus allowing selection of most suitable
+execution environment for a Digital Twin.
+Most models require tools to evaluate them in the context of data inputs.
+There exist cases where executable packages are run as binaries
+in a computing environment. Each of these packages are a pre-packaged
+combination of models and tools put together to create a ready
+to use Digital Twins.</p>
 <h3 id="digital-twins">Digital Twins</h3>
-<p>These are ready to use digital twins created by one or more users. These digital twins can be reconfigured later for specific use cases.</p>
+<p>These are ready to use digital twins created by one or more users.
+These digital twins can be reconfigured later for specific use cases.</p>
 <h2 id="file-system-structure">File System Structure</h2>
-<p>Each user has their assets put into five different directories named above. In addition, there will also be common library assets that all users have access to. A simplified example of the structure is as follows:</p>
+<p>Each user has their assets put into five different
+directories named above. In addition, there will also be
+common library assets that all users have access to.
+A simplified example of the structure is as follows:</p>
 <div class="language-text highlight"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre><span></span><span class="normal"><a href="#__codelineno-0-1"> 1</a></span>
 <span class="normal"><a href="#__codelineno-0-2"> 2</a></span>
 <span class="normal"><a href="#__codelineno-0-3"> 3</a></span>
@@ -1396,17 +1433,34 @@ There exist cases where executable packages are run as binaries in a computing e
 </span></code></pre></div></td></tr></table></div>
 <div class="admonition tip">
 <p class="admonition-title">Tip</p>
-<p>The DTaaS is agnostic to the format of your assets. The only requirement is that they are files which can be uploaded on the Library page. Any directories can be compressed as one file and uploaded. You can decompress the file into a directory from a Terminal or xfce Desktop available on the Workbench page.</p>
+<p>The DTaaS is agnostic to the format of your assets.
+The only requirement is that they are files which can
+be uploaded on the Library page. Any directories can be
+compressed as one file and uploaded. You can decompress
+the file into a directory from a Terminal or xfce Desktop
+available on the Workbench page.</p>
 </div>
-<p>A recommended file system structure for storing assets is also available in <a href="https://github.com/INTO-CPS-Association/DTaaS-examples">DTaaS examples</a>.</p>
+<p>A recommended file system structure for storing assets is also
+available in
+<a href="https://github.com/INTO-CPS-Association/DTaaS-examples">DTaaS examples</a>.</p>
 <h2 id="create-assets">Create Assets</h2>
 <p>The DTaaS software allows users to create new library assets on the platform.</p>
 <p><img alt="Create Library Assets" src="author.png" /></p>
-<p>Users can install asset authoring tools in their own workspace. These authoring tools can then be used to create and publish new assets. User workspaces are private and are not shared with other users. Thus any licensed software tools installed in their workspace is only available to them.</p>
+<p>Users can install asset authoring tools in their own workspace.
+These authoring tools can then be used to create and publish new assets.
+User workspaces are private and are not shared with other users.
+Thus any licensed software tools installed in their workspace is
+only available to them.</p>
 <h2 id="upload-assets">Upload Assets</h2>
 <p>Users can upload assets into their workspace using Library page of the website.</p>
 <p><img alt="Library Page" src="../../website/library.png" /></p>
-<p>You can go into a directory and click on the <strong>upload</strong> button to upload a file or a directory into your workspace. This asset is then available in all the workbench tools you can use. You can also create new assets on the page by clicking on <strong>new</strong> drop down menu. This is a simple web interface which allows you to create text-based files. You need to upload other files using <strong>upload</strong> button.</p>
+<p>You can go into a directory and click on the <strong>upload</strong>
+button to upload a file or a directory into your workspace.
+This asset is then available in all the workbench tools you can use.
+You can also create new assets on the page by
+clicking on <strong>new</strong> drop down menu. This is a simple web interface
+which allows you to create text-based files.
+You need to upload other files using <strong>upload</strong> button.</p>
 
 
 
