--- a/development/FAQ.html
+++ b/development/FAQ.html
@@ -1258,6 +1258,8 @@
 </tbody>
 </table>
 <h2 id="general-questions">General Questions</h2>
+<!-- markdownlint-disable MD046 -->
+
 <details class="question">
 <summary>What is DTaaS?</summary>
 <p>DTaaS is software platform on which you can create and run digital twins.
@@ -1308,7 +1310,15 @@ to get a sense of the things you can do in DaaS.</p>
 </tr>
 <tr>
 <td align="left">Availability</td>
-<td align="left">It is a matter of human resources. If you have human resources to maintain DTaaS round the clock, upwards 95% is easily possible.</td>
+<td align="left">It is a matter of human resources. If you have human</td>
+</tr>
+<tr>
+<td align="left">resources to maintain DTaaS round the clock,</td>
+<td align="left"></td>
+</tr>
+<tr>
+<td align="left">upwards 95% is easily possible.</td>
+<td align="left"></td>
 </tr>
 </tbody>
 </table>
@@ -1325,8 +1335,8 @@ installed by one user is not available to another user.</p>
 <details class="question">
 <summary>Can DTaaS create new DT models?</summary>
 <p>DTaaS is not a model creation  tool. You can put model creation tool
-inside DTaaS and create new models.</p>
-<p>The DTaaS itself does not create digital twin models but it can help
+inside DTaaS and create new models.
+The DTaaS itself does not create digital twin models but it can help
 users create digital twin models. You can run
 Linux desktop / terminal tools  inside the DTaaS. So you can create
 models inside DTaaS and run them using tools that can run in Linux.
@@ -1350,13 +1360,13 @@ he licensed Matlab software.</p>
 <details class="question">
 <summary>Can DTaaS support only the information models (or behavioral models) or some other kind of models?</summary>
 <p>The DTaaS as such is agnostic to the kind of models you use. DTaaS can
-run all kinds of models. This includes behavioral and data models.</p>
-<p>As long as you have models and the matching solvers that can run in
-Linux OS, you are good to go in DTaaS.</p>
-<p>In some cases, models and solvers (tools) are bundled together
+run all kinds of models. This includes behavioral and data models.
+As long as you have models and the matching solvers that can run in
+Linux OS, you are good to go in DTaaS.
+In some cases, models and solvers (tools) are bundled together
 to form monolithic DTs. The DTaaS does not limit you from running
-such DTs as well.</p>
-<p>DTaaS does not provide dedicated solvers. But if you can install
+such DTs as well.
+DTaaS does not provide dedicated solvers. But if you can install
 a solver in your workspace, then you don't need the platform
 to provide one.</p>
 </details>
@@ -1374,23 +1384,23 @@ communicated to the digital twin. Any digital twin platform like
 DTaaS can only facilitate this communication of these measurements
 from physical twin. The DTaaS provides InfluxDB, RabbitMQ and Mosquitto
 services for this purpose. These three are probably most widely used
-services for digital twin communication.</p>
-<p>Having said that, DTaaS allows you to utilize other communication
+services for digital twin communication.
+Having said that, DTaaS allows you to utilize other communication
 technologies and services hosted elsewhere on the Internet.</p>
 </details>
 <details class="question">
 <summary>How a real-time data can be differed from static data and what is the procedure to identify dynamic data? Is there any UI or specific tool used here?</summary>
 <p>DTaaS can not understand the static or dynamic nature of data.
 It can facilitate storing names, units and any other text description
-of interesting quantities (weight of batter, voltage output etc).</p>
-<p>It can also store the data being sent by the physical twin.
+of interesting quantities (weight of batter, voltage output etc).
+It can also store the data being sent by the physical twin.
 The distinction between static and dynamic data needs to be made by
-the user.</p>
-<p>Only metadata of the data can reveal such more information about
+the user.
+Only metadata of the data can reveal such more information about
 the nature of data. A tool can probably help in very specific cases,
 but you need metadata. If there is a human being making this distinction,
-then the need for metadata goes down but does not completely go away.</p>
-<p>In some of the DT platforms supported by manufacturers, there is a tight
+then the need for metadata goes down but does not completely go away.
+In some of the DT platforms supported by manufacturers, there is a tight
 integration between data and model. In this case, the tool itself is
 taking care of the metadata. The DTaaS is a generic platform which can
 support execution of digital twins. If a tool can be executed on
@@ -1403,19 +1413,19 @@ The tool (ex. Matlab) itself can take care of the metadata requirements.</p>
 to digital entity and back to physical entity. How this communication
 should happen is decided by the person designing the digital entity.
 The DTaaS can provide communication services that can help you do this
-communication with relative ease.</p>
-<p>You can use InfluxDB, RabbitMQ and Mosquitto services hosted on DTaaS for
+communication with relative ease.
+You can use InfluxDB, RabbitMQ and Mosquitto services hosted on DTaaS for
 two communication between digital and physical entities.</p>
 </details>
 <h2 id="data-management">Data Management</h2>
 <details class="question">
 <summary>Does DTaaS support data collection from different sources like hardware, software and network? Is there any user interface or any tracking instruments used for data collection?</summary>
 <p>The DTaaS provids InfluxDB, RabbitMQ, MQTT  services. Both the physical twin
-and digital twin can utilize these protocols for communication.</p>
-<p>The IoT (time-series) data can be collected using InfluxDB and MQTT
+and digital twin can utilize these protocols for communication.
+The IoT (time-series) data can be collected using InfluxDB and MQTT
 broker services. There is a user interface for InfluxDB which can be
-used to analyze the data collected.</p>
-<p>Users can also manually upload their data files into DTaaS.</p>
+used to analyze the data collected.
+Users can also manually upload their data files into DTaaS.</p>
 </details>
 <details class="question">
 <summary>Which transmission protocol does DTaaS allow?</summary>
@@ -1562,9 +1572,10 @@ run all kinds of models natively in GE Predix. In fact you can run models
 even next to (on) PTs using GE Predix. But you cannot natively do that in
 Azure DT service. You have to do the leg work of integrating with other
 Azure services or third-party services to get the kind of capabilities
-that GE Predix natively provides in one interface.</p>
-<p>The takeaway is that we pick horses for the courses.</p>
+that GE Predix natively provides in one interface.
+The takeaway is that we pick horses for the courses.</p>
 </details>
+<!-- markdownlint-enable MD046 -->
 
 
 
