--- a/development/user/servers/lib/LIB-MS.html
+++ b/development/user/servers/lib/LIB-MS.html
@@ -1194,23 +1194,34 @@
 
 
 <h1 id="library-microservice">Library Microservice</h1>
-<p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2023 Fonticons, Inc.--><path d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm-40-176h24v-64h-24c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24h-80c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"/></svg></span> <strong>The library microservice provides an API interface to reusable assets library. This is only for expert users who need to integrate the DTaaS with their own IT systems. Regular users can safely skip this page.</strong></p>
-<p>The lib microservice is responsible for handling and serving the contents of library assets of the DTaaS platform. It provides API endpoints for clients to query, and fetch these assets.</p>
+<p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2023 Fonticons, Inc.--><path d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm-40-176h24v-64h-24c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24h-80c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"/></svg></span> <strong>The library microservice provides</strong>
+<strong>an API interface to reusable assets library.</strong>
+<strong>This is only for expert users who need to integrate the DTaaS</strong>
+<strong>with their own IT systems. Regular users can safely skip this page.</strong></p>
+<p>The lib microservice is responsible for handling and serving
+the contents of library assets of the DTaaS platform.
+It provides API endpoints for clients to query, and fetch these assets.</p>
 <p>This document provides instructions for using the library microservice.</p>
-<p>Please see <a href="assets.html">assets</a> for a suggested storage conventions of your library assets.</p>
-<p>Once the assets are stored in the library, you can access the server's endpoint by typing in the following URL: <code>http://foo.com/lib</code>.</p>
-<p>The URL opens a graphql playground. You can check the query schema and try sample queries here. You can also send graphql queries as HTTP POST requests and get responses.</p>
+<p>Please see <a href="assets.html">assets</a> for a suggested storage
+conventions of your library assets.</p>
+<p>Once the assets are stored in the library,
+you can access the server's endpoint by typing
+in the following URL: <code>http://foo.com/lib</code>.</p>
+<p>The URL opens a graphql playground.
+You can check the query schema and try sample queries here.
+You can also send graphql queries as HTTP POST requests and get responses.</p>
 <h2 id="api-queries">API Queries</h2>
 <p>The library microservice services two API calls:</p>
 <ul>
 <li>Provide a list of contents for a directory</li>
 <li>Fetch a file from the available files</li>
 </ul>
-<p>The API calls are accepted over GraphQL and HTTP API end points. The format of the accepted queries are:</p>
+<p>The API calls are accepted over GraphQL and HTTP API end points.
+The format of the accepted queries are:</p>
 <h3 id="provide-list-of-contents-for-a-directory">Provide list of contents for a directory</h3>
 <p>To retrieve a list of files in a directory, use the following GraphQL query.</p>
 <p>Replace <code>path</code> with the desired directory path.</p>
-<p>send requests to: https://foo.com/lib</p>
+<p>send requests to: <http:>https://foo.com/lib</http:></p>
 <div class="tabbed-set tabbed-alternate" data-tabs="1:4"><input checked="checked" id="__tabbed_1_1" name="__tabbed_1" type="radio" /><input id="__tabbed_1_2" name="__tabbed_1" type="radio" /><input id="__tabbed_1_3" name="__tabbed_1" type="radio" /><input id="__tabbed_1_4" name="__tabbed_1" type="radio" /><div class="tabbed-labels"><label for="__tabbed_1_1">GraphQL Query</label><label for="__tabbed_1_2">GraphQL Response</label><label for="__tabbed_1_3">HTTP Request</label><label for="__tabbed_1_4">HTTP Response</label></div>
 <div class="tabbed-content">
 <div class="tabbed-block">
@@ -1397,16 +1408,14 @@
 <span class="normal"><a href="#__codelineno-3-5">5</a></span>
 <span class="normal"><a href="#__codelineno-3-6">6</a></span>
 <span class="normal"><a href="#__codelineno-3-7">7</a></span>
-<span class="normal"><a href="#__codelineno-3-8">8</a></span>
-<span class="normal"><a href="#__codelineno-3-9">9</a></span></pre></div></td><td class="code"><div><pre><span></span><code><span id="__span-3-1"><a id="__codelineno-3-1" name="__codelineno-3-1"></a>HTTP/1.1 200 OK
+<span class="normal"><a href="#__codelineno-3-8">8</a></span></pre></div></td><td class="code"><div><pre><span></span><code><span id="__span-3-1"><a id="__codelineno-3-1" name="__codelineno-3-1"></a>HTTP/1.1 200 OK
 </span><span id="__span-3-2"><a id="__codelineno-3-2" name="__codelineno-3-2"></a>Access-Control-Allow-Origin: *
 </span><span id="__span-3-3"><a id="__codelineno-3-3" name="__codelineno-3-3"></a>Connection: close
 </span><span id="__span-3-4"><a id="__codelineno-3-4" name="__codelineno-3-4"></a>Content-Length: 306
 </span><span id="__span-3-5"><a id="__codelineno-3-5" name="__codelineno-3-5"></a>Content-Type: application/json; charset=utf-8
 </span><span id="__span-3-6"><a id="__codelineno-3-6" name="__codelineno-3-6"></a>Date: Tue, 26 Sep 2023 20:26:49 GMT
 </span><span id="__span-3-7"><a id="__codelineno-3-7" name="__codelineno-3-7"></a>X-Powered-By: Express
-</span><span id="__span-3-8"><a id="__codelineno-3-8" name="__codelineno-3-8"></a>
-</span><span id="__span-3-9"><a id="__codelineno-3-9" name="__codelineno-3-9"></a>{&quot;data&quot;:{&quot;listDirectory&quot;:{&quot;repository&quot;:{&quot;tree&quot;:{&quot;blobs&quot;:{&quot;edges&quot;:[]},&quot;trees&quot;:{&quot;edges&quot;:[{&quot;node&quot;:{&quot;name&quot;:&quot;data&quot;,&quot;type&quot;:&quot;tree&quot;}},{&quot;node&quot;:{&quot;name&quot;:&quot;digital twins&quot;,&quot;type&quot;:&quot;tree&quot;}},{&quot;node&quot;:{&quot;name&quot;:&quot;functions&quot;,&quot;type&quot;:&quot;tree&quot;}},{&quot;node&quot;:{&quot;name&quot;:&quot;models&quot;,&quot;type&quot;:&quot;tree&quot;}},{&quot;node&quot;:{&quot;name&quot;:&quot;tools&quot;,&quot;type&quot;:&quot;tree&quot;}}]}}}}}}
+</span><span id="__span-3-8"><a id="__codelineno-3-8" name="__codelineno-3-8"></a>{&quot;data&quot;:{&quot;listDirectory&quot;:{&quot;repository&quot;:{&quot;tree&quot;:{&quot;blobs&quot;:{&quot;edges&quot;:[]},&quot;trees&quot;:{&quot;edges&quot;:[{&quot;node&quot;:{&quot;name&quot;:&quot;data&quot;,&quot;type&quot;:&quot;tree&quot;}},{&quot;node&quot;:{&quot;name&quot;:&quot;digital twins&quot;,&quot;type&quot;:&quot;tree&quot;}},{&quot;node&quot;:{&quot;name&quot;:&quot;functions&quot;,&quot;type&quot;:&quot;tree&quot;}},{&quot;node&quot;:{&quot;name&quot;:&quot;models&quot;,&quot;type&quot;:&quot;tree&quot;}},{&quot;node&quot;:{&quot;name&quot;:&quot;tools&quot;,&quot;type&quot;:&quot;tree&quot;}}]}}}}}}
 </span></code></pre></div></td></tr></table></div>
 </div>
 </div>
@@ -1488,15 +1497,13 @@ with content of <code>hello world</code>.</p>
 <span class="normal"><a href="#__codelineno-6-4">4</a></span>
 <span class="normal"><a href="#__codelineno-6-5">5</a></span>
 <span class="normal"><a href="#__codelineno-6-6">6</a></span>
-<span class="normal"><a href="#__codelineno-6-7">7</a></span>
-<span class="normal"><a href="#__codelineno-6-8">8</a></span></pre></div></td><td class="code"><div><pre><span></span><code><span id="__span-6-1"><a id="__codelineno-6-1" name="__codelineno-6-1"></a>POST /lib HTTP/1.1
+<span class="normal"><a href="#__codelineno-6-7">7</a></span></pre></div></td><td class="code"><div><pre><span></span><code><span id="__span-6-1"><a id="__codelineno-6-1" name="__codelineno-6-1"></a>POST /lib HTTP/1.1
 </span><span id="__span-6-2"><a id="__codelineno-6-2" name="__codelineno-6-2"></a>Host: foo.com
 </span><span id="__span-6-3"><a id="__codelineno-6-3" name="__codelineno-6-3"></a>Content-Type: application/json
 </span><span id="__span-6-4"><a id="__codelineno-6-4" name="__codelineno-6-4"></a>Content-Length: 217
-</span><span id="__span-6-5"><a id="__codelineno-6-5" name="__codelineno-6-5"></a>
-</span><span id="__span-6-6"><a id="__codelineno-6-6" name="__codelineno-6-6"></a>{
-</span><span id="__span-6-7"><a id="__codelineno-6-7" name="__codelineno-6-7"></a>  &quot;query&quot;:&quot;query {\n  readFile(path: \&quot;user2/data/welcome.txt\&quot;) {\n    repository {\n      blobs {\n        nodes {\n          name\n          rawBlob\n          rawTextBlob\n        }\n      }\n    }\n  }\n}&quot;
-</span><span id="__span-6-8"><a id="__codelineno-6-8" name="__codelineno-6-8"></a>}
+</span><span id="__span-6-5"><a id="__codelineno-6-5" name="__codelineno-6-5"></a>{
+</span><span id="__span-6-6"><a id="__codelineno-6-6" name="__codelineno-6-6"></a>  &quot;query&quot;:&quot;query {\n  readFile(path: \&quot;user2/data/welcome.txt\&quot;) {\n    repository {\n      blobs {\n        nodes {\n          name\n          rawBlob\n          rawTextBlob\n        }\n      }\n    }\n  }\n}&quot;
+</span><span id="__span-6-7"><a id="__codelineno-6-7" name="__codelineno-6-7"></a>}
 </span></code></pre></div></td></tr></table></div>
 </div>
 <div class="tabbed-block">
@@ -1507,21 +1514,21 @@ with content of <code>hello world</code>.</p>
 <span class="normal"><a href="#__codelineno-7-5">5</a></span>
 <span class="normal"><a href="#__codelineno-7-6">6</a></span>
 <span class="normal"><a href="#__codelineno-7-7">7</a></span>
-<span class="normal"><a href="#__codelineno-7-8">8</a></span>
-<span class="normal"><a href="#__codelineno-7-9">9</a></span></pre></div></td><td class="code"><div><pre><span></span><code><span id="__span-7-1"><a id="__codelineno-7-1" name="__codelineno-7-1"></a>HTTP/1.1 200 OK
+<span class="normal"><a href="#__codelineno-7-8">8</a></span></pre></div></td><td class="code"><div><pre><span></span><code><span id="__span-7-1"><a id="__codelineno-7-1" name="__codelineno-7-1"></a>HTTP/1.1 200 OK
 </span><span id="__span-7-2"><a id="__codelineno-7-2" name="__codelineno-7-2"></a>Access-Control-Allow-Origin: *
 </span><span id="__span-7-3"><a id="__codelineno-7-3" name="__codelineno-7-3"></a>Connection: close
 </span><span id="__span-7-4"><a id="__codelineno-7-4" name="__codelineno-7-4"></a>Content-Length: 134
 </span><span id="__span-7-5"><a id="__codelineno-7-5" name="__codelineno-7-5"></a>Content-Type: application/json; charset=utf-8
 </span><span id="__span-7-6"><a id="__codelineno-7-6" name="__codelineno-7-6"></a>Date: Wed, 27 Sep 2023 09:17:18 GMT
 </span><span id="__span-7-7"><a id="__codelineno-7-7" name="__codelineno-7-7"></a>X-Powered-By: Express
-</span><span id="__span-7-8"><a id="__codelineno-7-8" name="__codelineno-7-8"></a>
-</span><span id="__span-7-9"><a id="__codelineno-7-9" name="__codelineno-7-9"></a>{&quot;data&quot;:{&quot;readFile&quot;:{&quot;repository&quot;:{&quot;blobs&quot;:{&quot;nodes&quot;:[{&quot;name&quot;:&quot;welcome.txt&quot;,&quot;rawBlob&quot;:&quot;hello world&quot;,&quot;rawTextBlob&quot;:&quot;hello world&quot;}]}}}}}
+</span><span id="__span-7-8"><a id="__codelineno-7-8" name="__codelineno-7-8"></a>{&quot;data&quot;:{&quot;readFile&quot;:{&quot;repository&quot;:{&quot;blobs&quot;:{&quot;nodes&quot;:[{&quot;name&quot;:&quot;welcome.txt&quot;,&quot;rawBlob&quot;:&quot;hello world&quot;,&quot;rawTextBlob&quot;:&quot;hello world&quot;}]}}}}}
 </span></code></pre></div></td></tr></table></div>
 </div>
 </div>
 </div>
-<p>The <em>path</em> refers to the file path to look at: For example, <em>user1</em> looks at files of <strong>user1</strong>; <em>user1/functions</em> looks at contents of <em>functions/</em> directory.</p>
+<p>The <em>path</em> refers to the file path to look at:
+For example, <em>user1</em> looks at files of
+<strong>user1</strong>; <em>user1/functions</em> looks at contents of <em>functions/</em> directory.</p>
 
 
 
